--- a/htdocs/wp-content/themes/amisBM/assets/scss/header-footer.scss
+++ b/htdocs/wp-content/themes/amisBM/assets/scss/header-footer.scss
@@ -11,7 +11,6 @@
     top: 0;
     left: 0;
     z-index: 10;
-    overflow-inline: hidden;
 
     display: flex;
     justify-content: space-between;
